[FEAT] JWT 인증 Filter 추가
로그인 성공 시 token 발급

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,9 @@ server:
   port: 8088
 
 spring:
+  profiles:
+    include: jwt
+
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:33060/flower_fight?useUnicode=true&serverTimezone=Asia/Seoul
